fix text wrap

--- a/src/pages/common/Home.module.scss
+++ b/src/pages/common/Home.module.scss
@@ -277,6 +277,9 @@
             gap: 4px;
             & > h5 {
               cursor: pointer;
+              text-wrap: nowrap;
+              text-overflow: ellipsis;
+              overflow: hidden;
             }
             .description {
               width: fit-content;
